<resources>
    <string name="app_name">MobileIconChanger</string>
    <string name="xposed_description">Change your mobile data icons! For example you can change the 3G/4G icons into 5G!</string>
    <string-array name="scope">
        <item>com.android.systemui</item>
    </string-array>
    <string name="title_activity_settings">MobileIconChanger Settings</string>

    <string name="xposed_inactive">XPosed is not available.\nPlease ensure it\'s working and is activated for this module.\nIf you think this is wrong, click refresh or restart your device.</string>
    <string name="xposed_nohook">SystemUI is not hooked properly.\nCheck if the activation scope is correctly set and restart SystemUI or reboot your device.</string>
    <string name="xposed_nores">SystemUI Resources are not hooked properly.\nDid you enable the resource hooks?\nRestart SystemUI or reboot your device.</string>
    <string name="xposed_nohook_app">Restart the app to check again.</string>
    <string name="title_restartApp">Refresh</string>
    <string name="change_notice">The icon %1$s will be replaced by the %2$s icon %3$s.</string>
    <string name="hidden_notice">The icon %1$s will be hidden.</string>
    <string name="title_iconNotice">Change icon %1$s</string>
    <string name="summary_iconNotice">Choose what icon to replace the icon %1$s with.</string>
    <string name="title_replacements">Icon Replacements</string>
    <string name="summary_replacements">Here you can select each icon and what to replace it with.</string>
    <string name="category_title_icons">Icons</string>
    <string name="category_title_systemui">SystemUI</string>
    <string name="title_systemui">Restart SystemUI</string>
    <string name="summary_systemui">Apply changes by restarting SystemUI.\n(root access needed)</string>
    <string name="title_none">None</string>
    <string name="summary_none">Don\'t replace this icon.</string>
    <string name="title_hide">Hide</string>
    <string name="summary_hide">Replace this icon with an empty version.</string>
    <string name="title_noIcons">No Icons found!</string>
    <string name="summary_noIcons">This usually will fix itself upon reboot.\nJust reboot now. You got the time. C\'mon do it. Just do it.</string>
    <string name="title_replaceColor">Change Color</string>
    <string name="summary_replaceColor">Enable this to overwrite the color of the icon.\nThe icon will not automatically adjust to dark mode anymore.</string>
    <string name="title_color">Icon Color</string>
    <string name="summary_color">The color will only be applied for icons set for replacement.\nYou can replace an icon with itself to only apply the color.</string>

</resources>